Fix the image css max-width so it renders better on mobile screen sizes

--- a/_sass/_layout.scss
+++ b/_sass/_layout.scss
@@ -278,7 +278,7 @@ img {
     display: block;
     margin-left: auto;
     margin-right: auto;
-    max-width: 700px;
+    max-width: 100%;
 }
 .col{
 width: 100%;
